feat: introduce new SysdigImageScanningProcessBuilder to build the commands